client_react/src/container/Work/Work.scss
.app__works {
  flex: 1;
  width: 100%;
  flex-direction: column;
}

.app__work-filter {
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  align-items: center;
  flex-wrap: wrap;

  margin: 4rem 0 2rem;

  .app__work-filter-item {
    min-width: 180px;
    padding: 0.5rem 1.5rem;
    border-radius: 9999px;
    background-color: var(--secondary-background);
    color: var(--lightBlue-color);

    cursor: pointer;
    transition: all 0.3s ease;
    margin: 0.5rem;

    &:hover {
      background-color: var(--secondary-color);
      color: var(--white-color);
    }
    @media screen and (min-width: 2000px) {
      padding: 1rem 2rem;
      border-radius: 0.85rem;
    }
    @media screen and (max-width: 576px) {
      min-width: auto;
    }
  }

  .item-active {
    background-color: var(--secondary-color);
    color: var(--white-color);
  }
}

.app__work-portfolio {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;

  .app__work-item {
    display: flex;
    justify-content: flex-start;
    width: 400px;
    flex-direction: column;
    height: 450px;
    margin: 2rem;
    padding: 1rem;
    border-radius: 0.5rem;
    background-color: var(--secondary-background);
    color: #0000;
    cursor: pointer;
    transition: all 0.3s ease;

    &:hover {
      box-shadow: 0 0 25px rgba(0, 0, 0, 0.2);
    }

    @media screen and (min-width: 2000px) {
      width: 500px;
      padding: 1.225rem;
      border-radius: 0.75rem;
      min-height: 650px;
    }
    @media screen and (max-width: 768px) {
      width: 100%;
      margin: 0 0 1rem 0;
    }
  }

  .app__work-img {
    width: 100%;
    min-height: 230px;
    position: relative;

    img {
      width: 100%;
      height: 100%;
      border-radius: 0.5rem;
      object-fit: cover;
    }

    @media screen and (min-width: 2000px) {
      min-height: 260px;
    }
  }

  .app__work-coming-item {
    height: 100%;
    width: 100%;
    border-radius: 10px;
    background-color: rgba(255, 255, 255, 0.1);
    h1 {
      color: var(--lightBlue-color);
      background: -webkit-linear-gradient(
        120deg,
        #4ca5ff 2.34%,
        #b673f8 100.78%
      );
      -webkit-background-clip: text;
      background-clip: text;
      -webkit-text-fill-color: transparent;
    }
  }
  @media screen and (max-width: 768px) {
    width:100%; 
  }
}

.app__work-hover {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.5);
  border-radius: 0.5rem;

  opacity: 0;
  transition: all 0.3s ease;

  div {
    width: 50px;
    height: 50px;
    margin: 0 0.5rem;
    border-radius: 50%;
    background-color: rgba(0, 0, 0, 0.5);
    color: var(--white-color);

    margin: 1rem;
    font-family: var(--font-base);
    font-weight: 800;
    transition: all 0.3s ease;

    svg {
      width: 50%;
      height: 50%;
    }
  }
  @media screen and (max-width: 560px) {
    opacity: 1;
  }
}

.app__work-content {
  padding: 1.25rem 0.5rem 0.5rem 0.5rem;
  width: 100%;
  position: relative;
  flex-direction: column;

  h4 {
    margin-top: 1rem;
    line-height: 1.5;
    color: var(--white-color);
  }

  .app__work-tag {
    position: absolute;
    padding: 0.5rem 1rem;
    border-radius: 10px;
    background-color: var(--secondary-background);
    top: -25px;

    p {
      color: var(--lightBlue-color);
    }
  }
}

